catkin_ws/logs/backend/build.make.779.log
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target rosgraph_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_cpp
[ 88%] Built target frontend
[35m[1mScanning dependencies of target backend[0m
[ 94%] [32mBuilding CXX object CMakeFiles/backend.dir/src/main.cpp.o[0m
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘void logPoseGraphNode(const SLAM::Frame&, const Isometry3d&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:97:7: error: expected ‘;’ before string constant
  cout "[VSLAM] roll" <<  r << "  pitch is " << p << " yaw is " << y << endl; 
       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:97:76: warning: statement has no effect [-Wunused-value]
  cout "[VSLAM] roll" <<  r << "  pitch is " << p << " yaw is " << y << endl; 
                                                                            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:286:37: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if (slam.getBadFrameCounter() == badFrameCnt)
                                     ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
